# mirror-cn

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish-pypi.yml
docker/: Dockerfile
src/mirror_cn/: __init__.py  __main__.py  mirror.py  mirror_cn.py  redirect.py
tests/: test_basic.py
