[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "AClon314", email = "aclon-e@qq.com"},
]
dependencies = [
  "mitmproxy",
]
description = "国内临时/永久镜像加速 CN mirrors sites to accelerate"
keywords = ["mirror", "pixi", "conda", "pypi", "github", "git"]
license = {file = "LICENSE"}
name = "mirror_cn"
readme = "README.md"
version = "2025.06.19"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mirror = "mirror_cn:__main__.main"

[project.urls]
Download = "http://github.com/AClon314/mirror-cn/releases"
Homepage = "http://github.com/AClon314/mirror-cn"
